--- a/index.html
+++ b/index.html
@@ -39,6 +39,9 @@
         body { font-family: 'Inter', sans-serif; }
         .btn-tra-cuu { transition: all 0.3s ease; }
         .btn-tra-cuu:hover { transform: translateY(-2px); box-shadow: 0 4px 12px rgba(0, 0, 0, 0.15); }
+        /* Ẩn mũi tên mặc định của thẻ details */
+        summary { list-style: none; }
+        summary::-webkit-details-marker { display: none; }
     </style>
 
     <!-- JSON-LD for SEO -->
@@ -93,9 +96,31 @@
                     Lưu ý: Trang web sẽ chuyển hướng đến cổng thông tin của Sở GD&ĐT tương ứng.
                 </p>
             </div>
-            <div>
+            <div class="mb-8">
                 <p class="text-lg font-semibold text-indigo-600">Chúc các bạn sĩ tử đạt được kết quả tốt nhất!</p>
                 <p class="text-gray-500 mt-1">Hãy tự tin và vững bước trên con đường phía trước.</p>
+            </div>
+            
+            <!-- Phần ủng hộ dự án -->
+            <div class="pt-6 border-t border-gray-200">
+                <details class="group">
+                    <summary class="flex justify-center items-center font-medium text-gray-600 hover:text-indigo-600 cursor-pointer transition">
+                        <span>❤️</span>
+                        <span class="ml-2">Ủng hộ tác giả tạo trang web</span>
+                    </summary>
+                    <div class="mt-4 bg-gray-50 p-4 rounded-lg">
+                        <p class="mb-3 text-sm text-gray-700">Quét mã QR dưới đây để ủng hộ tác giả duy trì và phát triển trang web. Xin chân thành cảm ơn!</p>
+                        <div class="flex justify-center">
+                             <!-- QUAN TRỌNG: THAY THẾ LINK HÌNH ẢNH QR CỦA BẠN VÀO ĐÂY -->
+                            <img src="https://qr.sepay.vn/img?bank=MBBank&acc=911612580&template=compact&amount=&des=" alt="Mã QR ủng hộ ngân hàng" class="rounded-lg shadow-md border">
+                        </div>
+                        <div class="mt-4 text-sm text-left inline-block">
+                            <p><b>Ngân hàng:</b> <span class="font-mono">MB Bank</span></p>
+                            <p><b>Số tài khoản:</b> <span class="font-mono">911612580</span></p>
+                            <p><b>Chủ tài khoản:</b> <span class="font-mono">HUYNH HAI DUONG ❤️</span></p>
+                        </div>
+                    </div>
+                </details>
             </div>
         </footer>
     </main>
@@ -193,4 +218,3 @@
     </script>
 </body>
 </html>
-
