--- a/index.html
+++ b/index.html
@@ -11,11 +11,11 @@
     <meta name="keywords" content="tra cứu điểm thi, điểm thi thpt 2025, xem điểm thi, tra cứu điểm thi tốt nghiệp, điểm thi 2025, công bố điểm thi thpt 2025, điểm thi các tỉnh, Hà Nội, TP.HCM, Đà Nẵng">
     <meta name="author" content="Gemini">
     <meta name="robots" content="index, follow">
-    <link rel="canonical" href="https://your-domain.com/tra-cuu-diem-thi-2025"> <!-- Thay bằng tên miền của bạn -->
+    <link rel="canonical" href="https://kiemtradiemthithptqg.github.io/kiemtradiemthithptqg/"> <!-- Thay bằng tên miền của bạn -->
 
     <!-- Open Graph / Facebook -->
     <meta property="og:type" content="website">
-    <meta property="og:url" content="https://your-domain.com/tra-cuu-diem-thi-2025"> <!-- Thay bằng tên miền của bạn -->
+    <meta property="og:url" content="https://kiemtradiemthithptqg.github.io/kiemtradiemthithptqg/"> <!-- Thay bằng tên miền của bạn -->
     <meta property="og:title" content="Tra cứu điểm thi tốt nghiệp THPT 2025 chính thức - 63 tỉnh thành">
     <meta property="og:description" content="Tra cứu điểm thi tốt nghiệp THPT năm 2025 nhanh và chính xác nhất tại 63 tỉnh thành. Link xem điểm thi chính thức từ các Sở GD&ĐT.">
     <meta property="og:image" content="https://placehold.co/1200x630/6366f1/ffffff?text=Tra+Cứu+Điểm+Thi+2025">
@@ -127,7 +127,7 @@
 
         <!-- PHẦN BÌNH LUẬN (ĐẶT Ở CUỐI CÙNG) -->
         <section aria-labelledby="comment-heading" class="mt-10 pt-6 border-t border-gray-200">
-            <h2 id="comment-heading" class="text-xl font-bold text-gray-800 text-center mb-4">Bình luận và góp ý</h2>
+            <h2 id="comment-heading" class="text-xl font-bold text-gray-800 text-center mb-4">Trò Chuyện Linh Tinh</h2>
             <div class="giscus-container">
                 <!-- 
                   HƯỚNG DẪN CÀI ĐẶT BÌNH LUẬN:
