--- a/index.html
+++ b/index.html
@@ -138,20 +138,20 @@
                   5. Copy các giá trị được tạo ra từ trang Giscus và dán vào các thuộc tính data-* dưới đây.
                 -->
                 <script src="https://giscus.app/client.js"
-                        data-repo="[NHẬP_TÊN_REPO_CỦA_BẠN_VÀO_ĐÂY]"
-                        data-repo-id="[NHẬP_REPO_ID_VÀO_ĐÂY]"
-                        data-category="[NHẬP_TÊN_CATEGORY_THẢO_LUẬN_VÀO_ĐÂY]"
-                        data-category-id="[NHẬP_CATEGORY_ID_VÀO_ĐÂY]"
-                        data-mapping="pathname"
-                        data-strict="0"
-                        data-reactions-enabled="1"
-                        data-emit-metadata="0"
-                        data-input-position="top"
-                        data-theme="light"
-                        data-lang="vi"
-                        crossorigin="anonymous"
-                        async>
-                </script>
+        data-repo="kiemtradiemthithptqg/kiemtradiemthithptqg"
+        data-repo-id="R_kgDOPME9ww"
+        data-category="General"
+        data-category-id="DIC_kwDOPME9w84Cs61j"
+        data-mapping="pathname"
+        data-strict="0"
+        data-reactions-enabled="1"
+        data-emit-metadata="0"
+        data-input-position="top"
+        data-theme="preferred_color_scheme"
+        data-lang="vi"
+        crossorigin="anonymous"
+        async>
+</script>
             </div>
         </section>
 
