--- a/index.html
+++ b/index.html
@@ -140,15 +140,16 @@
                 <script src="https://giscus.app/client.js"
         data-repo="kiemtradiemthithptqg/kiemtradiemthithptqg"
         data-repo-id="R_kgDOPME9ww"
-        data-category="General"
-        data-category-id="DIC_kwDOPME9w84Cs61j"
+        data-category="Show and tell"
+        data-category-id="DIC_kwDOPME9w84Cs61m"
         data-mapping="pathname"
         data-strict="0"
         data-reactions-enabled="1"
         data-emit-metadata="0"
-        data-input-position="top"
+        data-input-position="bottom"
         data-theme="preferred_color_scheme"
         data-lang="vi"
+        data-loading="lazy"
         crossorigin="anonymous"
         async>
 </script>
