--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 
     <!-- Twitter -->
     <meta property="twitter:card" content="summary_large_image">
-    <meta property="twitter:url" content="https://your-domain.com/tra-cuu-diem-thi-2025"> <!-- Thay bằng tên miền của bạn -->
+    <meta property="twitter:url" content="https://kiemtradiemthithptqg.github.io/kiemtradiemthithptqg/"> <!-- Thay bằng tên miền của bạn -->
     <meta property="twitter:title" content="Tra cứu điểm thi tốt nghiệp THPT 2025 chính thức - 63 tỉnh thành">
     <meta property="twitter:description" content="Tra cứu điểm thi tốt nghiệp THPT năm 2025 nhanh và chính xác nhất tại 63 tỉnh thành. Link xem điểm thi chính thức từ các Sở GD&ĐT.">
     <meta property="twitter:image" content="https://placehold.co/1200x630/6366f1/ffffff?text=Tra+Cứu+Điểm+Thi+2025">
@@ -107,10 +107,10 @@
                 <details class="group">
                     <summary class="flex justify-center items-center font-medium text-gray-600 hover:text-indigo-600 cursor-pointer transition">
                         <span>❤️</span>
-                        <span class="ml-2">Ủng hộ tác giả tạo trang web</span>
+                        <span class="ml-2">Ủng hộ tác giả</span>
                     </summary>
                     <div class="mt-4 bg-gray-50 p-4 rounded-lg">
-                        <p class="mb-3 text-sm text-gray-700">Quét mã QR dưới đây để ủng hộ tác giả duy trì và phát triển trang web. Xin chân thành cảm ơn!</p>
+                        <p class="mb-3 text-sm text-gray-700">Quét mã QR dưới đây để ủng hộ tác giả duy trì và phát triển kênh kiểm tra điểm THPTQG. Xin chân thành cảm ơn!</p>
                         <div class="flex justify-center">
                              <!-- QUAN TRỌNG: THAY THẾ LINK HÌNH ẢNH QR CỦA BẠN VÀO ĐÂY -->
                             <img src="https://qr.sepay.vn/img?bank=MBBank&acc=911612580&template=compact&amount=&des=" alt="Mã QR ủng hộ ngân hàng" class="rounded-lg shadow-md border">
