--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
         <footer class="text-center mt-8 pt-6 border-t border-gray-200">
             <div class="mb-6">
                  <p class="text-xs text-gray-400">
-                    Lưu ý: Trang web sẽ chuyển hướng đến cổng thông tin của Sở GD&ĐT tương ứng.
+                    Lưu ý: Trang web sẽ chuyển hướng đến cổng thông tin của Sở GD&ĐT tương ứng, hãy chọn chọn những tỉnh đã được xác nhập <a href="https://thuvienphapluat.vn/phap-luat/ho-tro-phap-luat/danh-sach-sap-nhap-34-tinh-thanh-moi-nhat-2025-ten-goi-trung-tam-hanh-chinh-dien-tich-va-dan-so-ra--475580-214308.html">Tại đây</a>.
                 </p>
             </div>
             <div class="mb-8">
@@ -107,7 +107,7 @@
                 <details class="group">
                     <summary class="flex justify-center items-center font-medium text-gray-600 hover:text-indigo-600 cursor-pointer transition">
                         <span>❤️</span>
-                        <span class="ml-2">Ủng hộ tác giả</span>
+                        <span class="ml-2">Ủng hộ dự án của của tác giả</span><span>❤️</span>
                     </summary>
                     <div class="mt-4 bg-gray-50 p-4 rounded-lg">
                         <p class="mb-3 text-sm text-gray-700">Quét mã QR dưới đây để ủng hộ tác giả duy trì và phát triển kênh kiểm tra điểm THPTQG. Xin chân thành cảm ơn!</p>
