--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
         <footer class="text-center mt-8 pt-6 border-t border-gray-200">
             <div class="mb-6">
                  <p class="text-xs text-gray-400">
-                    Lưu ý: Trang web sẽ chuyển hướng đến cổng thông tin của Sở GD&ĐT tương ứng, hãy chọn chọn những tỉnh đã được xác nhập <a href="https://thuvienphapluat.vn/phap-luat/ho-tro-phap-luat/danh-sach-sap-nhap-34-tinh-thanh-moi-nhat-2025-ten-goi-trung-tam-hanh-chinh-dien-tich-va-dan-so-ra--475580-214308.html">Tại đây</a>.
+                    Lưu ý: Trang web sẽ chuyển hướng đến cổng thông tin của Sở GD&ĐT tương ứng, hãy chọn chọn những tỉnh đã được sác nhập <a href="https://thuvienphapluat.vn/phap-luat/ho-tro-phap-luat/danh-sach-sap-nhap-34-tinh-thanh-moi-nhat-2025-ten-goi-trung-tam-hanh-chinh-dien-tich-va-dan-so-ra--475580-214308.html" style="color:red;">Tại đây</a>.
                 </p>
             </div>
             <div class="mb-8">
